test/valid/test3.2.puzzle
# This puzzle is solvable
       3
0 2   1
3 		8 5
	7 6 4
