test/invalid/test3.1.puzzle
# This puzzle is unsolvable
3
1 5 3 2
4 0 8 3
6 7 2 7
